Add MQTT configuration and implement MqttPublisher for message handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
   esphome/ESPAsyncWebServer-esphome @ ^3.3.0
+  knolleary/PubSubClient @ 2.8
 
 ; Upload will be done via EspProg
 upload_protocol = esp-prog
