Update platformio.ini for minimal SPIFFS partition and optimize build flags; rename update interval variable for clarity in main.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev-usb-dev]
+board_build.partitions = min_spiffs.csv  ; Use minimal SPIFFS partition
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -23,7 +24,12 @@ lib_deps =
 upload_protocol = esp-prog
 
 ; Build flags = switch to use the private secret
-build_flags = -DUSE_PRIVATE_SECRET
+build_flags = 
+  -DUSE_PRIVATE_SECRET
+  -Os                         ; Optimize for size
+  -ffunction-sections
+  -fdata-sections
+  -Wl,--gc-sections
 
 ; Debug configuration
 debug_tool = esp-prog
