not tested and complete

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,10 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
+; Build flags = switch to use the private secret
+build_flags = 
+  -DUSE_PRIVATE_SECRET
+
+lib_deps = 
+  PubSubClient
+  ArduinoJson
