refact: move wifi functionality from main to WifiManager class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "istream": "cpp",
     "ostream": "cpp",
     "cmath": "cpp",
-    "functional": "cpp"
+    "functional": "cpp",
+    "string": "cpp"
   }
 }
