feat: enhance logging with trace levels and update GPIO configurations in README

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,11 @@ build_flags =
 lib_deps = 
   PubSubClient
   ArduinoJson
+
+; Upload 
+;upload_protocol = esp-prog
+
+; Debug configuration
+;debug_tool = esp-prog
+; Debugger will automatically break at the setup function
+;debug_init_break = tbreak setup
