feat: implement OTA update functionality with configuration and management

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,11 +21,26 @@ build_flags =
 lib_deps = 
   PubSubClient
   ArduinoJson
+  ArduinoOTA
 
-; Upload 
-;upload_protocol = esp-prog
+[env:esp32dev-ota]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
 
-; Debug configuration
-;debug_tool = esp-prog
-; Debugger will automatically break at the setup function
-;debug_init_break = tbreak setup
+; Build flags = switch to use the private secret
+build_flags = 
+  -DUSE_PRIVATE_SECRET
+
+lib_deps = 
+  PubSubClient
+  ArduinoJson
+  ArduinoOTA
+
+; OTA Upload configuration
+upload_protocol = espota
+upload_port = 192.168.178.6  ; Will be auto-discovered or use IP
+upload_flags = 
+  --port=3232
+  --auth=your_ota_password_here
