feat: add DHT11 sensor management and MQTT integration

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
   PubSubClient
   ArduinoJson
   ArduinoOTA
+  DHT sensor library
 
 [env:esp32dev-ota]
 platform = espressif32
@@ -37,6 +38,7 @@ lib_deps =
   PubSubClient
   ArduinoJson
   ArduinoOTA
+  DHT sensor library
 
 ; OTA Upload configuration
 upload_protocol = espota
