refactor: update board configuration and improve logging in various components. Also optimize some workflows in mqtt

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev-usb-dev]
+[env:az-delivery-devkit-v4-usb]
 platform = espressif32
-board = esp32dev
+board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
 
@@ -24,9 +24,9 @@ lib_deps =
   ArduinoOTA
   DHT sensor library
 
-[env:esp32dev-ota]
+[env:az-delivery-devkit-v4-ota]
 platform = espressif32
-board = esp32dev
+board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
 
